Fixed spacing on the project thumbs

--- a/assets/sass/pages/_project.scss
+++ b/assets/sass/pages/_project.scss
@@ -27,6 +27,8 @@ main.project-main {
   .thumbs-item {
     @extend .column;
     @extend .column-block;
+    padding: 3px;
+    margin: 0;
 
     img {
       opacity: 1;
